--- a/read/i.html
+++ b/read/i.html
@@ -47,6 +47,8 @@
 <h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live</h2>
 
+<p style="text-align:center; font-weight:bold; color:#b36b00;" id="projectLabel"></p>
+
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
 <div class="input-buttons">
@@ -84,11 +86,11 @@
 <div class="backup-area">
   <h3>🔒 Backup & Import Data</h3>
   <div class="input-buttons">
-    <button onclick="exportLocalStorage()">Backup Data ke File</button>
+    <button onclick="exportProjectData()">Backup Data Proyek Ini</button>
     <input type="file" id="importFile" accept=".json">
-    <button onclick="importLocalStorage()">Import Data</button>
+    <button onclick="importProjectData()">Import Data Proyek</button>
   </div>
-  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
+  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetProjectData()">❌ Hapus Semua Data Proyek</button>
 </div>
 
 <footer>
@@ -101,188 +103,187 @@ const PAGE_OFFSET = 20;
 let allPages = [];
 let currentPage = 1;
 
+// --- Elemen
 const inputLinksEl = document.getElementById('inputLinks');
 const statsEl = document.getElementById('stats');
 const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
+const projectLabel = document.getElementById('projectLabel');
 
-// Ambil parameter proyek dari URL (contoh: index.html?v=01)
-const params = new URLSearchParams(window.location.search);
-const project = params.get('v') || 'default';
+// --- Ambil proyek dari URL
+const urlParams = new URLSearchParams(window.location.search);
+const project = urlParams.get('v') || 'default';
+projectLabel.textContent = '📁 Proyek: ' + project;
 
-// Fungsi buat key unik per proyek
+// --- Helper key unik per proyek + file
 function getStorageKey(file='default') {
   return `appData_${project}_${file}`;
 }
 
-// === Penyimpanan & Pemulihan ===
-function saveAppData() {
-  const key = getStorageKey(dropdownEl.value || 'default');
-  const data = { inputList: inputLinksEl.value, currentPage };
-  localStorage.setItem(key, JSON.stringify(data));
+// --- Simpan & Load
+function saveAppData(file='default') {
+  localStorage.setItem(getStorageKey(file), JSON.stringify({inputList: inputLinksEl.value, currentPage}));
 }
-function loadAppData() {
-  const key = getStorageKey(dropdownEl.value || 'default');
-  const data = JSON.parse(localStorage.getItem(key) || '{}');
+function loadAppData(file='default') {
+  const data = JSON.parse(localStorage.getItem(getStorageKey(file)) || '{}');
   if (data.inputList) inputLinksEl.value = data.inputList;
   currentPage = data.currentPage || 1;
 }
 
-// === Saat Halaman Dibuka ===
+// --- Saat halaman load
 window.addEventListener('load', () => {
-  const savedDropdown = localStorage.getItem(getStorageKey('selectedFile'));
+  const savedDropdown = localStorage.getItem(`selectedFile_${project}`);
   if (savedDropdown) dropdownEl.value = savedDropdown;
-  loadAppData(); processLinks(); showPage(currentPage);
+  loadAppData(dropdownEl.value || 'default'); processLinks(); showPage(currentPage);
 });
-dropdownEl.addEventListener('change', () => {
-  localStorage.setItem(getStorageKey('selectedFile'), dropdownEl.value);
-  loadAppData(); processLinks(); showPage(currentPage);
-});
-inputLinksEl.addEventListener('input', () => { processLinks(); saveAppData(); });
 
-// === Tombol Input ===
+// --- Dropdown change
+dropdownEl.addEventListener('change', () => {
+  localStorage.setItem(`selectedFile_${project}`, dropdownEl.value);
+  loadAppData(dropdownEl.value || 'default'); processLinks(); showPage(currentPage);
+});
+
+// --- Input change
+inputLinksEl.addEventListener('input', () => { processLinks(); saveAppData(dropdownEl.value || 'default'); });
+
+// --- Tombol Input
 document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
-  inputLinksEl.value = ''; saveAppData(); processLinks();
+  inputLinksEl.value=''; saveAppData(dropdownEl.value || 'default'); processLinks();
 });
 document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
   const text = inputLinksEl.value.trim();
-  if (!text) return alert('Input kosong!');
-  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
+  if(!text) return alert('Input kosong!');
+  navigator.clipboard.writeText(text).then(()=>alert('Disalin!'));
 });
 document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
-  const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const lines = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
   const unique = [...new Set(lines)];
-  inputLinksEl.value = unique.join('\n'); processLinks(); saveAppData();
+  inputLinksEl.value = unique.join('\n'); processLinks(); saveAppData(dropdownEl.value || 'default');
   alert('Duplikat dihapus!');
 });
 
-// === Proses Link ===
+// --- Proses Link
 function processLinks() {
-  const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const raw = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
   const dup = raw.length - unique.length;
   allPages = [];
-  for (let i = 0; i < unique.length; i += MAX_PER_PAGE)
-    allPages.push(unique.slice(i, i + MAX_PER_PAGE));
-  if (currentPage > allPages.length) currentPage = 1;
+  for(let i=0;i<unique.length;i+=MAX_PER_PAGE) allPages.push(unique.slice(i,i+MAX_PER_PAGE));
+  if(currentPage>allPages.length) currentPage=1;
   renderStats(raw.length, unique.length, dup);
   renderPagination();
 }
 function renderStats(total, uniq, dup) {
-  statsEl.textContent =
-    `Proyek: ${project}\nTotal link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
+  statsEl.textContent = `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
 }
 function showPage(page) {
-  if (!allPages.length) { outputEl.style.display = 'none'; return; }
+  if(!allPages.length){ outputEl.style.display='none'; return; }
   currentPage = page;
-  outputEl.innerHTML = allPages[page - 1].map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
-  outputEl.style.display = 'block';
-  highlightActivePage(); saveAppData();
+  outputEl.innerHTML = allPages[page-1].map(l=>`<a href="${l}" target="_blank">${l}</a>`).join('');
+  outputEl.style.display='block';
+  highlightActivePage(); saveAppData(dropdownEl.value || 'default');
 }
 function renderPagination() {
-  paginationEl.innerHTML = '';
-  for (let i = 1; i <= allPages.length; i++) {
-    const btn = document.createElement('button');
-    btn.textContent = i + PAGE_OFFSET;
-    btn.className = 'page-btn';
-    if (i === currentPage) btn.classList.add('active');
-    btn.onclick = () => showPage(i);
+  paginationEl.innerHTML='';
+  for(let i=1;i<=allPages.length;i++){
+    const btn=document.createElement('button');
+    btn.textContent=i+PAGE_OFFSET;
+    btn.className='page-btn';
+    if(i===currentPage) btn.classList.add('active');
+    btn.onclick=()=>showPage(i);
     paginationEl.appendChild(btn);
   }
 }
-function highlightActivePage() {
-  document.querySelectorAll('.page-btn').forEach((btn, index) => {
-    btn.classList.toggle('active', index + 1 === currentPage);
+function highlightActivePage(){
+  document.querySelectorAll('.page-btn').forEach((btn,index)=>{
+    btn.classList.toggle('active',index+1===currentPage);
   });
 }
-function copyToClipboard() {
-  if (!allPages.length) return alert('Tidak ada link!');
-  const text = allPages[currentPage - 1].join('\n');
-  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
+function copyToClipboard(){
+  if(!allPages.length) return alert('Tidak ada link!');
+  const text = allPages[currentPage-1].join('\n');
+  navigator.clipboard.writeText(text).then(()=>alert('Disalin!'));
 }
 
-// === Backup & Import ===
-function exportLocalStorage() {
+// --- Backup & Import per proyek
+function exportProjectData() {
+  const prefix = `appData_${project}_`;
   const data = {};
-  for (let i = 0; i < localStorage.length; i++) {
+  for(let i=0;i<localStorage.length;i++){
     const key = localStorage.key(i);
-    data[key] = localStorage.getItem(key);
+    if(key.startsWith(prefix)) data[key]=localStorage.getItem(key);
   }
-  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const blob = new Blob([JSON.stringify(data,null,2)],{type:'application/json'});
   const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url; a.download = 'madgazan_backup.json'; a.click();
+  const a=document.createElement('a');
+  a.href=url; a.download=`backup_${project}.json`; a.click();
   URL.revokeObjectURL(url);
-  alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
+  alert(`✅ Data proyek "${project}" berhasil di-backup`);
 }
-function importLocalStorage() {
-  const fileInput = document.getElementById('importFile');
-  const file = fileInput.files[0];
-  if (!file) return alert('Pilih file JSON dulu.');
-  const reader = new FileReader();
-  reader.onload = function(e) {
-    try {
-      const data = JSON.parse(e.target.result);
-      Object.keys(data).forEach(k => localStorage.setItem(k, data[k]));
-      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
+function importProjectData() {
+  const fileInput=document.getElementById('importFile');
+  const file=fileInput.files[0];
+  if(!file) return alert('Pilih file JSON dulu.');
+  const reader=new FileReader();
+  reader.onload=function(e){
+    try{
+      const data=JSON.parse(e.target.result);
+      Object.keys(data).forEach(k=>localStorage.setItem(k,data[k]));
+      alert('✅ Data berhasil diimport. Reload untuk melihat hasil.');
       location.reload();
-    } catch (err) {
-      alert('❌ File tidak valid: ' + err.message);
+    }catch(err){
+      alert('❌ File tidak valid: '+err.message);
     }
   };
   reader.readAsText(file);
 }
-function resetLocalStorage() {
-  if (confirm('Yakin ingin menghapus semua data localStorage untuk proyek ini?')) {
-    // Hapus semua key yang ada project ini
-    for(let i=0;i<localStorage.length;i++){
-      let k = localStorage.key(i);
-      if(k.startsWith(`appData_${project}`)) localStorage.removeItem(k);
+function resetProjectData(){
+  if(confirm(`Yakin ingin menghapus semua data proyek "${project}"?`)){
+    const prefix=`appData_${project}_`;
+    for(let i=localStorage.length-1;i>=0;i--){
+      const key=localStorage.key(i);
+      if(key.startsWith(prefix)) localStorage.removeItem(key);
     }
     location.reload();
   }
 }
 
-// === Sinkron Semua File dengan auto folder ===
-async function syncAllFiles() {
-  const options = Array.from(dropdownEl.options).filter(o => o.value);
-  if (!options.length) return alert('Tidak ada file di dropdown.');
-  if (!confirm(`Sinkron semua file (${options.length} file)?`)) return;
-
-  let success = 0, fail = 0, lastText = '', lastFile = '';
-
-  for (const opt of options) {
-    const filePaths = [opt.value, '../oktober1/' + opt.value]; // cek folder saat ini + folder oktober1
-    let fileText = null;
-
-    for(const path of filePaths){
+// --- Sinkron Semua File TXT (mencoba folder ../oktober1)
+async function syncAllFiles(){
+  const options = Array.from(dropdownEl.options).filter(o=>o.value);
+  if(!options.length) return alert('Tidak ada file di dropdown.');
+  if(!confirm(`Sinkron semua file (${options.length} file)?`)) return;
+  let success=0,fail=0,lastText='',lastFile='';
+  for(const opt of options){
+    try{
+      let url=opt.value;
       try{
-        const res = await fetch(path+'?t='+Date.now());
-        if(!res.ok) throw new Error('HTTP '+res.status);
-        fileText = await res.text();
-        break;
-      }catch{}
-    }
-
-    if(fileText !== null){
-      localStorage.setItem(getStorageKey(opt.value), JSON.stringify({inputList:fileText.trim(), currentPage:1}));
-      success++; lastText=fileText.trim(); lastFile=opt.value;
-    }else fail++;
+        let res=await fetch(url+'?t='+Date.now());
+        if(!res.ok) throw new Error('Not found'); 
+        const text=await res.text();
+        localStorage.setItem(getStorageKey(opt.value),JSON.stringify({inputList:text.trim(),currentPage:1}));
+        success++; lastText=text.trim(); lastFile=opt.value;
+        continue;
+      }catch{ 
+        url='../oktober1/'+opt.value;
+        const res=await fetch(url+'?t='+Date.now());
+        if(!res.ok) throw new Error('Not found'); 
+        const text=await res.text();
+        localStorage.setItem(getStorageKey(opt.value),JSON.stringify({inputList:text.trim(),currentPage:1}));
+        success++; lastText=text.trim(); lastFile=opt.value;
+      }
+    }catch{ fail++; }
   }
-
   if(lastText){
-    inputLinksEl.value = lastText;
-    dropdownEl.value = lastFile;
-    localStorage.setItem(getStorageKey('selectedFile'), lastFile);
+    inputLinksEl.value=lastText;
+    dropdownEl.value=lastFile;
+    localStorage.setItem(`selectedFile_${project}`,lastFile);
     processLinks(); showPage(1);
   }
-
   alert(`Sinkronisasi selesai.\nBerhasil: ${success}\nGagal: ${fail}\nTerakhir ditampilkan: ${lastFile}`);
 }
-
-document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
-
+document.getElementById('ambilFileListLinksBtn').addEventListener('click',syncAllFiles);
 </script>
 </body>
 </html>
