--- a/gabung/v5.html
+++ b/gabung/v5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sortir Toko - Produk Live MadGazan (v5)</title>
+<title>Sortir Toko - Produk Live MadGazan</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; }
   h1,h2,h3 { color:#b36b00; text-align:center; }
@@ -28,16 +28,17 @@
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
   .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
-  .log-box { text-align:left; background:#f8f8f8; border:1px solid #ddd; padding:8px; margin-top:10px; border-radius:6px; font-size:0.9rem; height:120px; overflow-y:auto; white-space:pre-line; }
 </style>
 </head>
 <body>
 
 <h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live v5.html</h2>
+
 <div id="projectInfo"></div>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
+
 <div class="input-buttons">
   <button id="clearInputLinksBtn">Clear Input Links</button>
   <button id="copyInputLinksBtn">Copy Input Links</button>
@@ -48,18 +49,20 @@
 <h3>Daftar File TXT Produk</h3>
 <select id="fileDropdown">
   <option value="">-- Pilih File TXT --</option>
-  <option value="satu.txt">jalb.txt</option>
-  <option value="dua.txt">rano.txt</option>
-  <option value="tiga.txt">kakfitro.txt</option>
-  <option value="empat.txt">rini.txt</option>
-  <option value="lima.txt">nurbad.txt</option>
+  <option value="jalb.txt">jalb.txt</option>
+  <option value="rano.txt">rano.txt</option>
+  <option value="kakfitro.txt">kakfitro.txt</option>
+  <option value="rini.txt">rini.txt</option>
+  <option value="nurbad.txt">nurbad.txt</option>
 </select>
+
 <div class="input-buttons">
   <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
 </div>
 
 <div class="sponsor">
-  Disponsori oleh <strong>Kios Tembakau MadGazan</strong><br>Solusi hemat untuk perokok bijak 🚬💨
+  Disponsori oleh <strong>Kios Tembakau MadGazan</strong><br>
+  Solusi hemat untuk perokok bijak 🚬💨
 </div>
 
 <div id="stats"></div>
@@ -67,137 +70,252 @@
 <h3>Output (Produk Siap Live)</h3>
 <div id="output"></div>
 <button id="copyBtn" onclick="copyToClipboard()">Copy Link di Halaman Ini</button>
+
 <div class="pagination" id="pagination"></div>
 
 <div class="backup-area">
-  <h3>🧭 Backup & Import Lintas Versi</h3>
-  <p><small>Mendukung impor dari v2–v5 secara otomatis</small></p>
+  <h3>🔒 Backup & Import Data</h3>
   <div class="input-buttons">
-    <button onclick="exportUniversalBackup()">📤 Backup Universal</button>
+    <button onclick="exportLocalStorage()">Backup Data ke File</button>
     <input type="file" id="importFile" accept=".json">
-    <button onclick="importUniversalBackup()">📥 Import Universal</button>
+    <button onclick="importLocalStorage()">Import Data</button>
   </div>
   <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
   <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Sinkron Semua File TXT</button>
-
-  <div id="logBox" class="log-box" hidden></div>
 </div>
 
-<footer>© 2025 Kios Tembakau MadGazan — Semua Hak Dilindungi</footer>
+<footer>
+  © 2025 Kios Tembakau MadGazan — Semua Hak Dilindungi
+</footer>
 
 <script>
-const APP_VERSION = 4;
 const MAX_PER_PAGE = 100;
-let allPages = [], currentPage = 1;
+const PAGE_OFFSET = 20;
+let allPages = [];
+let currentPage = 1;
 
+const inputLinksEl = document.getElementById('inputLinks');
+const statsEl = document.getElementById('stats');
+const outputEl = document.getElementById('output');
+const paginationEl = document.getElementById('pagination');
+const dropdownEl = document.getElementById('fileDropdown');
+
+/* === SISTEM ID UNIK PER FILE HTML === */
 const fileName = location.pathname.split('/').pop().replace('.html', '');
 const PROJECT_ID_KEY = 'madgazan_project_id_' + fileName;
 let PROJECT_ID = localStorage.getItem(PROJECT_ID_KEY);
+
 if (!PROJECT_ID) {
   PROJECT_ID = fileName + '_' + Date.now();
   localStorage.setItem(PROJECT_ID_KEY, PROJECT_ID);
-}
-document.getElementById('projectInfo').textContent = `🆔 ID Proyek Aktif: ${PROJECT_ID} (v${APP_VERSION})`;
-
-function log(msg){ const box=document.getElementById('logBox'); box.hidden=false; box.textContent += msg + '\\n'; box.scrollTop=box.scrollHeight; }
-
-function getStorageKey(suffix){
-  const f=document.getElementById('fileDropdown').value || 'default';
-  return `madgazan_data_${f}_${suffix||''}`;
+  console.log('🆕 ID proyek baru dibuat:', PROJECT_ID);
 }
 
-function saveAppData(){
-  const key=getStorageKey();
-  const data={version:APP_VERSION,project:PROJECT_ID,inputList:inputLinks.value,currentPage};
-  localStorage.setItem(key,JSON.stringify(data));
-}
-function loadAppData(){
-  const key=getStorageKey();
-  const data=JSON.parse(localStorage.getItem(key)||'{}');
-  if(data.inputList) inputLinks.value=data.inputList;
-  currentPage=data.currentPage||1;
-}
-const inputLinks=document.getElementById('inputLinks');
-inputLinks.addEventListener('input',()=>{processLinks();saveAppData();});
+/* === TAMPILKAN ID PROYEK DI HALAMAN === */
+document.getElementById('projectInfo').textContent = '🆔 ID Proyek Aktif: ' + PROJECT_ID;
 
-function processLinks(){
-  const raw=inputLinks.value.split('\\n').map(l=>l.trim()).filter(Boolean);
-  const unique=[...new Set(raw)];
-  allPages=[];
-  for(let i=0;i<unique.length;i+=MAX_PER_PAGE) allPages.push(unique.slice(i,i+MAX_PER_PAGE));
-  document.getElementById('stats').textContent=`Total: ${raw.length}\\nUnik: ${unique.length}\\nHalaman: ${allPages.length}`;
-  renderPagination();showPage(currentPage);
+/* === KEY UNIK PER FILE TXT === */
+function getStorageKey() {
+  const file = dropdownEl.value || 'default';
+  return `${PROJECT_ID}_appData_${file}`;
 }
-function showPage(p){if(!allPages.length)return;currentPage=p;const o=document.getElementById('output');o.style.display='block';o.innerHTML=allPages[p-1].map(l=>`<a href="${l}" target="_blank">${l}</a>`).join('');highlight();}
-function renderPagination(){const pg=document.getElementById('pagination');pg.innerHTML='';for(let i=1;i<=allPages.length;i++){const b=document.createElement('button');b.textContent=i;b.className='page-btn';if(i===currentPage)b.classList.add('active');b.onclick=()=>showPage(i);pg.appendChild(b);}}
-function highlight(){document.querySelectorAll('.page-btn').forEach((b,i)=>b.classList.toggle('active',i+1===currentPage));}
-function copyToClipboard(){if(!allPages.length)return alert('Tidak ada link!');navigator.clipboard.writeText(allPages[currentPage-1].join('\\n')).then(()=>alert('Disalin!'));}
 
-function exportUniversalBackup(){
-  const data={app:'madgazan',version:APP_VERSION,timestamp:Date.now(),items:{}};
-  Object.keys(localStorage).forEach(k=>{
-    if(k.includes('madgazan_data')) data.items[k]=localStorage.getItem(k);
+/* === SIMPAN & MUAT DATA === */
+function saveAppData() {
+  const key = getStorageKey();
+  const data = { inputList: inputLinksEl.value, currentPage };
+  localStorage.setItem(key, JSON.stringify(data));
+}
+function loadAppData() {
+  const key = getStorageKey();
+  const data = JSON.parse(localStorage.getItem(key) || '{}');
+  inputLinksEl.value = data.inputList || '';
+  currentPage = data.currentPage || 1;
+}
+
+/* === INISIALISASI === */
+window.addEventListener('load', () => {
+  const savedDropdown = localStorage.getItem(`${PROJECT_ID}_selectedFile`);
+  if (savedDropdown) dropdownEl.value = savedDropdown;
+  loadAppData();
+  processLinks();
+  showPage(currentPage);
+});
+
+dropdownEl.addEventListener('change', () => {
+  localStorage.setItem(`${PROJECT_ID}_selectedFile`, dropdownEl.value);
+  loadAppData();
+  processLinks();
+  showPage(currentPage);
+});
+
+inputLinksEl.addEventListener('input', () => {
+  processLinks();
+  saveAppData();
+});
+
+/* === FUNGSI TOMBOL === */
+document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
+  inputLinksEl.value = '';
+  saveAppData();
+  processLinks();
+});
+document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
+  const text = inputLinksEl.value.trim();
+  if (!text) return alert('Input kosong!');
+  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
+});
+document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
+  const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const unique = [...new Set(lines)];
+  inputLinksEl.value = unique.join('\n');
+  processLinks();
+  saveAppData();
+  alert('Duplikat dihapus!');
+});
+document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
+  const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const tokoMap = new Map();
+  for (let link of lines) {
+    const match = link.match(/product\/(\d+)\/(\d+)/);
+    if (match) {
+      const shopId = match[1];
+      if (!tokoMap.has(shopId)) tokoMap.set(shopId, link);
+    }
+  }
+  const hasil = Array.from(tokoMap.values());
+  inputLinksEl.value = hasil.join('\n');
+  processLinks();
+  saveAppData();
+  alert(`Sortir selesai!\nTotal toko unik: ${hasil.length}`);
+});
+
+/* === PEMROSESAN LINK & PAGINASI === */
+function processLinks() {
+  const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const unique = [...new Set(raw)];
+  const dup = raw.length - unique.length;
+  allPages = [];
+  for (let i = 0; i < unique.length; i += MAX_PER_PAGE) {
+    allPages.push(unique.slice(i, i + MAX_PER_PAGE));
+  }
+  if (currentPage > allPages.length) currentPage = 1;
+  renderStats(raw.length, unique.length, dup);
+  renderPagination();
+}
+function renderStats(total, uniq, dup) {
+  statsEl.textContent = `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
+}
+function showPage(page) {
+  if (!allPages.length) { outputEl.style.display = 'none'; return; }
+  currentPage = page;
+  outputEl.innerHTML = allPages[page - 1].map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
+  outputEl.style.display = 'block';
+  highlightActivePage();
+  saveAppData();
+}
+function renderPagination() {
+  paginationEl.innerHTML = '';
+  for (let i = 1; i <= allPages.length; i++) {
+    const btn = document.createElement('button');
+    btn.textContent = i + PAGE_OFFSET;
+    btn.className = 'page-btn';
+    if (i === currentPage) btn.classList.add('active');
+    btn.onclick = () => showPage(i);
+    paginationEl.appendChild(btn);
+  }
+}
+function highlightActivePage() {
+  document.querySelectorAll('.page-btn').forEach((btn, index) => {
+    btn.classList.toggle('active', index + 1 === currentPage);
   });
-  const blob=new Blob([JSON.stringify(data,null,2)],{type:'application/json'});
-  const a=document.createElement('a');a.href=URL.createObjectURL(blob);a.download=`madgazan_backup_v${APP_VERSION}.json`;a.click();
-  alert('✅ Backup universal dibuat!');
+}
+function copyToClipboard() {
+  if (!allPages.length) return alert('Tidak ada link!');
+  const text = allPages[currentPage - 1].join('\n');
+  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-function importUniversalBackup(){
-  const f=document.getElementById('importFile').files[0];
-  if(!f) return alert('Pilih file JSON dulu.');
-  const r=new FileReader();
-  r.onload=e=>{
-    try{
-      const data=JSON.parse(e.target.result);
-      let count=0;
-      if(data.app==='madgazan'&&data.items){
-        Object.entries(data.items).forEach(([k,v])=>{
-          localStorage.setItem(k,v);
-          count++;
-        });
-        log(`✅ Import sukses: ${count} item dimuat.`);
-      } else {
-        // Konversi versi lama (v2/v3)
-        Object.entries(data).forEach(([k,v])=>{
-          if(typeof v==='string'&&k.includes('project_id')) localStorage.setItem(k,v);
-          else if(typeof v==='string'&&k.includes('appData')) localStorage.setItem(k.replace('appData','data'),v);
-        });
-        log('⚙️ Import versi lama berhasil dikonversi otomatis.');
-      }
-      alert('✅ Data berhasil diimport.');
+/* === BACKUP, IMPORT, RESET === */
+function exportLocalStorage() {
+  const data = {};
+  Object.keys(localStorage).forEach(k => {
+    if (k.startsWith(PROJECT_ID)) data[k] = localStorage.getItem(k);
+  });
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = `${PROJECT_ID}_backup.json`;
+  a.click();
+  URL.revokeObjectURL(url);
+  alert('✅ Backup berhasil disimpan!');
+}
+function importLocalStorage() {
+  const fileInput = document.getElementById('importFile');
+  const file = fileInput.files[0];
+  if (!file) return alert('Pilih file JSON dulu.');
+  const reader = new FileReader();
+  reader.onload = e => {
+    try {
+      const data = JSON.parse(e.target.result);
+      Object.entries(data).forEach(([k, v]) => localStorage.setItem(k, v));
+      alert('✅ Data berhasil diimport!');
       location.reload();
-    }catch(err){alert('❌ Gagal membaca file: '+err.message);}
+    } catch (err) {
+      alert('❌ File tidak valid: ' + err.message);
+    }
   };
-  r.readAsText(f);
+  reader.readAsText(file);
 }
-
-function resetLocalStorage(){
-  if(!confirm('Hapus semua data MadGazan?'))return;
-  Object.keys(localStorage).forEach(k=>{if(k.includes('madgazan'))localStorage.removeItem(k);});
-  alert('✅ Semua data dihapus.');
+function resetLocalStorage() {
+  if (!confirm('Hapus semua data untuk proyek ini?')) return;
+  Object.keys(localStorage).forEach(k => {
+    if (k.startsWith(PROJECT_ID)) localStorage.removeItem(k);
+  });
+  alert('✅ Semua data proyek ini telah dihapus!');
   location.reload();
 }
 
-/* Sinkron file TXT */
-async function syncAllFiles(){
-  const dd=document.getElementById('fileDropdown');
-  const opts=Array.from(dd.options).filter(o=>o.value);
-  if(!confirm(`Sinkron semua file (${opts.length})?`))return;
-  let ok=0,fail=0;
-  for(const o of opts){
-    try{
-      const r=await fetch(o.value+'?t='+Date.now());if(!r.ok)throw new Error(r.status);
-      const t=await r.text();
-      const k=`madgazan_data_${o.value}`;
-      localStorage.setItem(k,JSON.stringify({version:APP_VERSION,inputList:t.trim(),currentPage:1}));
-      ok++;
-    }catch(e){fail++;}
+/* === SINKRONISASI SEMUA FILE TXT === */
+async function syncAllFiles() {
+  const options = Array.from(dropdownEl.options).filter(o => o.value);
+  if (!options.length) return alert('Tidak ada file di dropdown.');
+  if (!confirm(`Sinkron semua file (${options.length} file)?`)) return;
+
+  let success = 0, fail = 0, lastText = '', lastFile = '';
+
+  for (const opt of options) {
+    try {
+      const res = await fetch(opt.value + '?t=' + Date.now(), { cache: 'no-store' });
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      const text = await res.text();
+      const key = `${PROJECT_ID}_appData_${opt.value}`;
+      const data = { inputList: text.trim(), currentPage: 1 };
+      localStorage.setItem(key, JSON.stringify(data));
+      success++;
+      lastText = text.trim();
+      lastFile = opt.value;
+      console.log(`✅ ${opt.value} berhasil disinkronkan.`);
+    } catch (e) {
+      console.warn(`❌ Gagal ambil ${opt.value}:`, e);
+      fail++;
+    }
   }
-  alert(`Selesai: ${ok} berhasil, ${fail} gagal`);
+
+  if (lastText) {
+    inputLinksEl.value = lastText;
+    dropdownEl.value = lastFile;
+    localStorage.setItem(`${PROJECT_ID}_selectedFile`, lastFile);
+    processLinks();
+    showPage(1);
+  }
+
+  alert(`Sinkronisasi selesai.\nBerhasil: ${success}\nGagal: ${fail}\nTerakhir ditampilkan: ${lastFile}`);
 }
-document.getElementById('syncAllBtn').addEventListener('click',syncAllFiles);
-document.getElementById('ambilFileListLinksBtn').addEventListener('click',syncAllFiles);
+
+document.getElementById('syncAllBtn').addEventListener('click', syncAllFiles);
+document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
 </script>
 </body>
 </html>
