--- a/lapor/v1.html
+++ b/lapor/v1.html
@@ -82,48 +82,8 @@
 
 <script>
 async function kirimPesan() {
-  const token = "8384730708:AAHjPCLYpW7wz2B5-jBxMJ17-kH1G1zXZuY"; // jangan tulis token asli di sini saat publikasi
-  const chat_id = "-1002080437836"; // ID channel kamu
-  const pesan = document.getElementById("pesan").value.trim();
-  const status = document.getElementById("status");
-
-  if (!pesan) {
-    status.textContent = "⚠️ Pesan tidak boleh kosong.";
-    status.style.color = "#cc0000";
-    return;
-  }
-
-  status.textContent = "⏳ Mengirim...";
-  status.style.color = "#555";
-
-  const url = `https://api.telegram.org/bot${token}/sendMessage`;
-
-  try {
-    const res = await fetch(url, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ chat_id: chat_id, text: pesan })
-    });
-
-    const data = await res.json();
-
-    if (data.ok) {
-      status.textContent = "✅ Pesan terkirim ke channel!";
-      status.style.color = "#009f3c";
-      document.getElementById("pesan").value = "";
-    } else {
-      status.textContent = "❌ Gagal: " + data.description;
-      status.style.color = "#cc0000";
-    }
-  } catch (err) {
-    status.textContent = "🚫 Error jaringan: " + err.message;
-    status.style.color = "#cc0000";
-  }
-}
-
-
-async function kirimPesan() {
-  const token = "YOUR_TELEGRAM_BOT_TOKEN"; // ganti saat lokal
+  // ⚠️ Gunakan token & chat_id yang valid
+  const token = "8384730708:AAHjPCLYpW7wz2B5-jBxMJ17-kH1G1zXZuY";
   const chat_id = "-1002080437836";
   const pesan = document.getElementById("pesan").value.trim();
   const status = document.getElementById("status");
@@ -145,9 +105,11 @@ async function kirimPesan() {
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ chat_id: chat_id, text: pesan })
     });
+
     const data = await res.json();
+
     if (data.ok) {
-      status.textContent = "✅ Pesan terkirim ke channel!";
+      status.textContent = "✅ Pesan laporan terkirim";
       status.style.color = "#009f3c";
       document.getElementById("pesan").value = "";
     } else {
@@ -160,7 +122,7 @@ async function kirimPesan() {
   }
 }
 
-/* === Tambahan: auto-isi dari URL === */
+// === Auto-isi dari URL (link & file) ===
 window.addEventListener('load', () => {
   const params = new URLSearchParams(window.location.search);
   const link = params.get('link');
@@ -169,9 +131,6 @@ window.addEventListener('load', () => {
     document.getElementById('pesan').value = file ? `${link} - ${file}` : link;
   }
 });
-
-
-  
 </script>
 </body>
 </html>
