--- a/lapor/index.html
+++ b/lapor/index.html
@@ -18,30 +18,49 @@
 
   .card {
     background: #ffffff;
-    padding: 25px 30px;
-    border-radius: 15px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    padding: 35px 40px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     width: 90%;
-    max-width: 450px;
+    max-width: 500px;
     text-align: center;
+    animation: fadeIn 0.6s ease-in-out;
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  .header-icon {
+    font-size: 40px;
+    color: #00b4db;
+    margin-bottom: 10px;
   }
 
   h2 {
     color: #0083b0;
+    margin-bottom: 10px;
+  }
+
+  p.subtitle {
+    color: #666;
+    font-size: 14px;
     margin-bottom: 20px;
   }
 
   textarea {
     width: 100%;
-    height: 120px;
-    padding: 12px;
+    height: 130px;
+    padding: 14px;
     font-size: 16px;
     border: 1px solid #ccc;
-    border-radius: 10px;
+    border-radius: 12px;
     resize: none;
     outline: none;
     transition: all 0.2s ease-in-out;
     font-family: inherit;
+    box-sizing: border-box;
   }
 
   textarea:focus {
@@ -53,37 +72,50 @@
     background-color: #00b4db;
     color: white;
     border: none;
-    border-radius: 10px;
-    padding: 12px 25px;
+    border-radius: 12px;
+    padding: 12px 28px;
     font-size: 16px;
-    margin-top: 15px;
+    margin-top: 18px;
     cursor: pointer;
-    transition: background 0.2s;
+    transition: background 0.2s, transform 0.1s;
   }
 
   button:hover {
     background-color: #0092b3;
+    transform: translateY(-1px);
   }
 
   #status {
     margin-top: 15px;
     font-weight: 500;
+    font-size: 15px;
+  }
+
+  footer {
+    margin-top: 25px;
+    font-size: 12px;
+    color: #777;
   }
 </style>
 </head>
 <body>
   <div class="card">
-    <h2>📢 Laporan Kendala MadGazan Studio</h2>
+    <div class="header-icon">📢</div>
+    <h2>Laporan Kendala</h2>
+    <p class="subtitle">Laporkan kendala produk atau link Shopee ditambah keterangan juga boleh.</p>
+
     <textarea id="pesan" placeholder="Tulis pesanmu di sini..."></textarea>
     <br>
     <button onclick="kirimPesan()">Kirim Sekarang</button>
     <p id="status"></p>
+
+    <footer>© 2025 MadGazan Studio</footer>
   </div>
 
 <script>
 async function kirimPesan() {
-  const token = "8384730708:AAHjPCLYpW7wz2B5-jBxMJ17-kH1G1zXZuY"; // jangan tulis token asli di sini saat publikasi
-  const chat_id = "-1002080437836"; // ID channel kamu
+  const token = "8384730708:AAHjPCLYpW7wz2B5-jBxMJ17-kH1G1zXZuY"; // ganti saat lokal
+  const chat_id = "-1002080437836";
   const pesan = document.getElementById("pesan").value.trim();
   const status = document.getElementById("status");
 
@@ -104,11 +136,9 @@ async function kirimPesan() {
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ chat_id: chat_id, text: pesan })
     });
-
     const data = await res.json();
-
     if (data.ok) {
-      status.textContent = "✅ Pesan terkirim ke channel!";
+      status.textContent = "✅ Pesan laporan terkirim!";
       status.style.color = "#009f3c";
       document.getElementById("pesan").value = "";
     } else {
@@ -120,6 +150,16 @@ async function kirimPesan() {
     status.style.color = "#cc0000";
   }
 }
+
+/* === Auto-isi dari URL === */
+window.addEventListener('load', () => {
+  const params = new URLSearchParams(window.location.search);
+  const link = params.get('link');
+  const file = params.get('file');
+  if (link) {
+    document.getElementById('pesan').value = file ? `${link} - ${file}` : link;
+  }
+});
 </script>
 </body>
 </html>
